# gHyPart_TACO

./: .gitignore  CMakeLists.txt  README.md  main.cu
cpu_works/BiPart/lonestar/analytics/cpu/bipart/: Coarsening.cpp  Partitioning.cpp  Refine.cpp  bipart.cpp
cpu_works/hmetis-1.5-linux/: s13207P.hgr.part.2
figure_plotting/: benchmarks_all.py  benchmarks_all_motivation.py  benchmarks_all_nodemerging_construction.py  benchmarks_all_versions_all.py  benchmarks_thread_utilization.py  hipeac_perf_comp_all_works_2way.py  hipeac_perf_comp_all_works_kway.py  perf_comp_across_cpu_archs.py  perf_comp_all_across_benchmarks.py  perf_comp_all_works.py  perf_comp_all_works_2way.py  perf_comp_all_works_kway.py  perf_comp_with_hyperg_2way.py  plot_quality.py  plot_time_percentage_all.py  quality_comp_all_works.py  sub.sh
figure_plotting/results/: benchmarks_all_construction_procedure_overP2_240108.csv  benchmarks_all_nodemerging_procedure_overP2_240108.csv  benchmarks_all_patterns_real_hypergraphs_4060Ti_2024-01-08.csv  benchmarks_all_patterns_real_hypergraphs_liu3090_2024-10-20_new.csv  benchmarks_all_patterns_top100_3090_2024-01-08.csv  benchmarks_top100_thread_utilization_2024-01-08.csv  bipart_perf_xeon_13900K_t24_2024-10-25.csv  bipart_perf_xeon_4214R_t12_2024-10-25.csv  bipart_perf_xeon_8358P_32cores_t32.csv  bipart_quality_results_2024-10-20.csv  ghypart_perf_RTX3090_2024-10-24.csv  ghypart_quality_results_2024-10-20.csv  ghypart_quality_results_2024-12-27.csv  kernel_percentage_all_overP2_3090_2024-01-06.csv  motivation_data_top100_2024-01-15.csv  mtkahypar_all_quality_xeon_4214R.csv  mtkahypar_perf_xeon_13900K_t24_direct_2024-10-25.csv  mtkahypar_perf_xeon_4214R_24cores_t12.csv  mtkahypar_perf_xeon_4214R_24cores_t12_241020.csv  mtkahypar_perf_xeon_8358P_32cores_t32.csv  mtkahypar_perf_xeon_8358P_64cores_t64.csv  perf_comp_with_hyperg_2way.csv  prof_hmetis_xeon_4214R_all.csv  quality_comp_all_240112.csv  works_all_comp_3090_2024-01-08.csv
hipeac_figure_plotting/: README.md  hipeac_GhYpart_best_vs_gHypart_nonBest.py  hipeac_benchmarks_all.py  hipeac_benchmarks_all_versions_all.py  hipeac_comp_all_gpu.py  hipeac_compare_ghypart_quality.py  hipeac_gHyPart_best_vs_gHypart_nonBest.py  hipeac_perf_comp_all_works_2way.py  hipeac_perf_comp_all_works_kway.py  hipeac_plot_quality.py  merged_all_quality.csv
hipeac_results/: hipeac_bipart_quality_AMD_Ryzen_5_3600_6-Core_Processor_t12_2025-11-29.csv  hipeac_ghypart_B_NVIDIA_GeForce_RTX_4090_t32_2025-11-27.csv  hipeac_ghypart_B_quality_NVIDIA_GeForce_RTX_4090_t32_2025-11-28.csv  hipeac_ghypart_NVIDIA_GeForce_RTX_2070_t12_2025-11-14.csv  hipeac_ghypart_all_best_NVIDIA_GeForce_RTX_4090_t32_2025-11-29.csv  hipeac_ghypart_quality_NVIDIA_GeForce_RTX_2070_2025-11-25.csv  hipeac_ghypart_quality_NVIDIA_GeForce_RTX_4090_t32_2025-11-28.csv  hipeac_prof_hmetis.csv
hipeac_script/: README.md  input_header.py  run-bipart-quality.py  run-gHyPart.py  run-mtkahypar.py  run_all_patterns.py
hipeac_script/patterns/: k12_pattern_p2.py  k12_pattern_p2b.py
hipeac_scripts/: README.md  input_header.py  run-bipart-quality.py  run-bipart.py  run-gHyPart.py  run-hmetis.py  run-mtkahypar.py  run_all_patterns.py
hipeac_scripts/patterns/: all_patterns.py  base_pattern.py  k12_pattern_p3.py  k4k6_patterns.py  p3_for_k1k2k3k5.py  selection.py
include/: coarsening_impl.h  construction_impl.h  graph.h  partitioning_impl.h  projection.cuh  refinement_impl.h
kernels/: coarsening_kernels.cu  coarsening_kernels.cuh  construction_kernels.cu  construction_kernels.cuh  partitioning_kernels.cu  partitioning_kernels.cuh  refinement_kernels.cu  refinement_kernels.cuh
no_uvm_impl/: coarsen_brute_force.cu  coarsen_no_uvm.cu  coarsen_no_uvm_cooperative_grid_imp.cuh  coarsen_no_uvm_kernels.cu  coarsen_no_uvm_kernels.cuh  coarsen_no_uvm_kernels_opt.cu  kway_partition_no_uvm.cu  kway_partition_no_uvm_kernels.cuh  partition_no_uvm.cu  partition_no_uvm_kernels.cu  partition_no_uvm_kernels.cuh  refinement_no_uvm.cu  refinement_no_uvm_kernels.cu  refinement_no_uvm_kernels.cuh  use_no_uvm.cu  use_no_uvm.cuh
no_uvm_impl/non-deterministic/: nondeterministic_coarsen_no_uvm.cu  nondeterministic_coarsen_no_uvm_kernels.cu  nondeterministic_coarsen_no_uvm_kernels.cuh
results/: benchmarks_all_patterns_real_hypergraphs_3090_2024-01-08.csv  benchmarks_all_patterns_real_hypergraphs_4090_2025-11-25.csv  bipart_perf_xeon_4214R_24cores_t12.csv  hipeac_bipart_Intel_CoreTM_i7-6700_t8_2025-09-14.csv  hipeac_bipart_Intel_Xeon_CPU_E5-2683_v3_@_2.00GHz_t56_2025-09-19.csv  hipeac_bipart_quality_Intel_Xeon_Gold_6142_t64_2025-11-26.csv  hipeac_ghypart-b_quality_NVIDIA_GeForce_RTX_2070_t12_2025-11-28.csv  hipeac_ghypart_B_all_best_NVIDIA_GeForce_RTX_4090_t32_2025-11-30.csv  hipeac_ghypart_B_quality_NVIDIA_GeForce_RTX_4090_t32_2025-11-28.csv  hipeac_ghypart_NVIDIA_GeForce_GTX_1060_3GB_t8_2025-09-15.csv  hipeac_ghypart_NVIDIA_GeForce_GTX_1060_3GB_t8_2025-11-22.csv  hipeac_ghypart_NVIDIA_GeForce_RTX_2070_t12_2025-11-21.csv  hipeac_ghypart_NVIDIA_GeForce_RTX_4090_t32_2025-09-14.csv  hipeac_ghypart_QUADRO_RTX_5000_2025-11-22.csv  hipeac_ghypart_quality_NVIDIA_GeForce_RTX_2070_2025-11-25.csv  hipeac_mtkahypar_Intel_Xeon_CPU_E5-2683_v3_@_2.00GHz_t56_2025-09-19.csv  hipeac_mtkahypar_quality_Intel_Xeon_Gold_6142_t64_2025-11-26.csv  motivation_data_all_baseline_top100_20240106.csv  prof_hmetis.csv
scripts/: hipeac_ghypart_B_NVIDIA_GeForce_GTX_1060_3GB_t8_2025-11-25.csv  input_features_with_best_patterns.csv  input_header.py  kernel selection.ipynb  run-bipart-quality.py  run-bipart.py  run-gHyPart.py  run-hmetis.py  run-mtkahypar.py  run_all_patterns.py  run_all_patterns_multiple_rounds.py  run_all_patterns_synthetic.py  run_all_patterns_top100.py  script-quality.sh
use_uvm_impl/: coarsening.cu  construction.cu  partitioning_base.cu  partitioning_opt1.cu  partitioning_opt2.cu  projection.cu  refinement_base.cu  refinement_opt1.cu  refinement_opt2.cu  refinement_opt3.cu  refinement_opt4.cu
utility/: param_config.cc  param_config.h  utils.cu  utils.cuh  validation.cu  validation.cuh
